ingress/hellok8s.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellok8s-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hellok8s-pod
  template:
    metadata:
      labels:
        app: hellok8s-pod
    spec:
      containers:
      - name: hellok8s-container
        image: augg1e/hellok8s:v3
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
  
---

apiVersion: v1
kind: Service
metadata:
  name: hellok8s-service-clusterip
spec:
  type: ClusterIP
  selector:
    app: hellok8s-pod
  ports:
  - port: 30000
    targetPort: 3000
