ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    # We are defining this annotation to prevent nginx
    # from redirecting requests to `https` for now
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hellok8s-service-clusterip
                port:
                  number: 30000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service-clusterip
                port:
                  number: 36660
